fix tag overflow

--- a/sass/includes/basic.scss
+++ b/sass/includes/basic.scss
@@ -165,7 +165,7 @@ footer {
 
   li {
     font-size: 14px;
-    display: inline;
+    display: inline-block;
     margin: 0px 12px 0px 0px;
 
     span {
